# Control-c

./: CMakeLists.txt  Main.qml  README.md  main.cpp
.github/workflows/: build.yml
